--- a/package.json
+++ b/package.json
@@ -6,22 +6,57 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@next/font": "^13.1.5",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.23.0",
+    "@trpc/client": "^10.9.0",
+    "@trpc/next": "^10.9.0",
+    "@trpc/react-query": "^10.9.0",
+    "@trpc/server": "^10.9.0",
     "class-variance-authority": "^0.4.0",
+    "i18next": "^22.4.9",
+    "jotai": "^1.13.1",
     "next": "13.1.1",
+    "next-auth": "^4.18.8",
+    "next-i18next": "^13.0.3",
+    "next-sitemap": "^3.1.47",
+    "next-themes": "^0.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
+    "react-i18next": "^12.1.4",
+    "react-icons": "^4.7.1",
+    "usehooks-ts": "^2.9.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@playwright/test": "^1.30.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "eslint-plugin-storybook": "^0.6.10",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.4"
+    "storybook-addon-sass-postcss": "^0.1.3",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
