--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -11,22 +12,30 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.5",
+    "@prisma/client": "^4.9.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.23.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@zag-js/menu": "^0.3.7",
+    "@zag-js/react": "^0.3.8",
+    "argon2": "^0.30.3",
     "class-variance-authority": "^0.4.0",
+    "cookies": "^0.8.0",
     "i18next": "^22.4.9",
     "jotai": "^1.13.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.1",
-    "next-auth": "^4.18.8",
+    "next-auth": "^4.19.0",
     "next-i18next": "^13.0.3",
     "next-sitemap": "^3.1.47",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
@@ -46,7 +55,9 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/cookies": "^0.7.7",
     "@types/node": "18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.26",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
@@ -55,6 +66,9 @@
     "eslint-plugin-storybook": "^0.6.10",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "prisma": "^4.9.0",
+    "sass": "^1.58.0",
     "storybook-addon-sass-postcss": "^0.1.3",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
