feat: add mail templates

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.5",
     "@prisma/client": "^4.9.0",
-    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.23.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -28,7 +27,7 @@
     "cookies": "^0.8.0",
     "i18next": "^22.4.9",
     "jotai": "^1.13.1",
-    "jsonwebtoken": "^9.0.0",
+    "mjml": "^4.13.0",
     "next": "13.1.1",
     "next-auth": "^4.19.0",
     "next-i18next": "^13.0.3",
@@ -46,7 +45,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@playwright/test": "^1.30.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -55,7 +53,9 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/cookies": "^0.7.7",
+    "@types/mjml": "^4.7.0",
     "@types/node": "18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.26",
