fix: better auth secret in e2e action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,4 @@ jobs:
           NEXT_PUBLIC_SITE_URL: ${{secrets.NEXT_PUBLIC_SITE_URL}}
           DATABASE_URL: ${{secrets.DATABASE_URL}}
           STRIPE_SECRET_KEY: ${{secrets.STRIPE_SECRET_KEY}}
+          BETTER_AUTH_SECRET: ${{secrets.BETTER_AUTH_SECRET}}
