fix: add better auth secret to turbo config

--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
 		"NODE_ENV",
 		"PORT",
 		"DATABASE_URL",
+		"BETTER_AUTH_SECRET",
 		"NEXT_PUBLIC_SITE_URL",
 		"VERCEL_URL",
 		"LEMONSQUEEZY_STORE_ID",
