--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"i18n-ally.localesPaths": ["packages/i18n/translations"],
 	"i18n-ally.keystyle": "nested",
-	"i18n-ally.enabledFrameworks": ["next-intl"]
+	"i18n-ally.enabledFrameworks": ["next-intl"],
+	"i18n-ally.keysInUse": ["mail.organizationInvitation.headline"]
 }
