--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,7 +28,7 @@
 		"@sindresorhus/slugify": "^2.2.1",
 		"@tanstack/react-query": "^5.61.3",
 		"@tanstack/react-table": "^8.20.5",
-		"better-auth": "1.0.0",
+		"better-auth": "1.0.8-beta.4",
 		"boring-avatars": "^1.11.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
