--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,7 @@
 		"hono-openapi": "^0.1.5",
 		"nanoid": "^5.0.8",
 		"openai": "^4.72.0",
+		"openapi-merge": "^1.3.3",
 		"use-intl": "^3.25.1",
 		"zod": "^3.23.8"
 	},
