--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,7 +6,7 @@
 		"@repo/logs": "workspace:*",
 		"@repo/mail": "workspace:*",
 		"@repo/utils": "workspace:*",
-		"better-auth": "1.0.0",
+		"better-auth": "1.0.8-beta.4",
 		"cookie": "^1.0.1",
 		"next": "15.0.2"
 	},
