--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,16 +39,16 @@
 		"jotai": "2.8.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.454.0",
-		"next": "15.0.3",
-		"next-intl": "3.25.1",
+		"next": "15.1.0",
+		"next-intl": "3.26.1",
 		"next-themes": "^0.4.3",
 		"nextjs-toploader": "^3.7.15",
 		"nprogress": "^0.2.0",
 		"nuqs": "^2.1.1",
 		"oslo": "^1.2.1",
-		"react": "19.0.0-rc-65a56d0e-20241020",
+		"react": "19.0.0",
 		"react-cropper": "^2.3.3",
-		"react-dom": "19.0.0-rc-65a56d0e-20241020",
+		"react-dom": "19.0.0",
 		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.53.2",
 		"server-only": "^0.0.1",
@@ -77,8 +77,8 @@
 		"@types/mdx": "^2.0.13",
 		"@types/node": "22.10.1",
 		"@types/nprogress": "^0.2.3",
-		"@types/react": "npm:types-react@19.0.0-rc.1",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"@types/react": "19.0.0",
+		"@types/react-dom": "19.0.0",
 		"@types/uuid": "^10.0.0",
 		"autoprefixer": "10.4.20",
 		"cypress": "^13.16.0",
