--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 	},
 	"pnpm": {
 		"overrides": {
-			"@types/react": "npm:types-react@19.0.0-rc.1",
-			"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+			"@types/react": "19.0.0",
+			"@types/react-dom": "19.0.0"
 		}
 	}
 }
