--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,13 +18,13 @@
 		"nanoid": "^5.0.8",
 		"openai": "^4.72.0",
 		"openapi-merge": "^1.3.3",
-		"use-intl": "^3.25.1",
+		"use-intl": "^3.26.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@repo/tsconfig": "workspace:*",
-		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react": "19.0.0",
 		"encoding": "^0.1.13",
 		"prisma": "^6.0.0",
 		"typescript": "5.6.3"
