--- a/packages/mail/package.json
+++ b/packages/mail/package.json
@@ -1,17 +1,17 @@
 {
 	"dependencies": {
-		"@react-email/components": "^0.0.28",
+		"@react-email/components": "^0.0.31",
 		"@react-email/render": "^1.0.2",
 		"@repo/config": "workspace:*",
 		"@repo/i18n": "workspace:*",
 		"@repo/logs": "workspace:*",
 		"lodash-es": "^4.17.21",
-		"next-intl": "3.25.1",
+		"next-intl": "3.26.1",
 		"nodemailer": "^6.9.16",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-email": "^3.0.2",
-		"use-intl": "^3.25.1"
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-email": "^3.0.4",
+		"use-intl": "^3.26.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -21,7 +21,7 @@
 		"@types/lodash-es": "^4.17.12",
 		"@types/node": "22.10.1",
 		"@types/nodemailer": "^6.4.17",
-		"@types/react": "npm:types-react@19.0.0-rc.1"
+		"@types/react": "19.0.0"
 	},
 	"main": "./index.ts",
 	"name": "@repo/mail",
