fix: navbar and biome config

--- a/biome.json
+++ b/biome.json
@@ -28,7 +28,8 @@
 				"noUnusedTemplateLiteral": {
 					"level": "error",
 					"fix": "safe"
-				}
+				},
+				"noNonNullAssertion": "warn"
 			}
 		}
 	},
