--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,7 @@
 		"nprogress": "^0.2.0",
 		"nuqs": "^2.2.3",
 		"oslo": "^1.2.1",
+		"prettier": "^3.3.3",
 		"react": "19.0.0",
 		"react-cropper": "^2.3.3",
 		"react-dom": "19.0.0",
