--- a/tooling/scripts/package.json
+++ b/tooling/scripts/package.json
@@ -15,7 +15,7 @@
 	"name": "@repo/scripts",
 	"private": true,
 	"scripts": {
-		"seed": "dotenv -c -e ../../.env -- tsx ./src/seed.ts",
+		"create:user": "dotenv -c -e ../../.env -- tsx ./src/create-user.ts",
 		"type-check": "tsc --noEmit"
 	},
 	"version": "0.0.0"
