--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@aws-sdk/client-s3": "3.437.0",
+		"@fumadocs/content-collections": "^1.1.6",
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-accordion": "^1.2.2",
 		"@radix-ui/react-alert-dialog": "^1.1.4",
@@ -35,6 +36,8 @@
 		"cropperjs": "1.6.2",
 		"date-fns": "^4.1.0",
 		"deepmerge": "^4.3.1",
+		"fumadocs-core": "^14.6.4",
+		"fumadocs-ui": "^14.6.4",
 		"hono": "^4.6.14",
 		"jotai": "2.8.0",
 		"js-cookie": "^3.0.5",
