fix: react imports for mail templates

--- a/biome.json
+++ b/biome.json
@@ -45,5 +45,8 @@
 			".content-collections",
 			"./packages/database/src/zod/index.ts"
 		]
+	},
+	"javascript": {
+		"jsxRuntime": "reactClassic"
 	}
 }
