--- a/turbo.json
+++ b/turbo.json
@@ -30,7 +30,8 @@
 		"RESEND_API_KEY",
 		"POSTMARK_SERVER_TOKEN",
 		"NEXT_PUBLIC_AVATARS_BUCKET_NAME",
-		"OPENAI_API_KEY"
+		"OPENAI_API_KEY",
+		"CREEM_API_KEY"
 	],
 	"tasks": {
 		"build": {
