--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,6 +6,7 @@
 		"@repo/logs": "workspace:*",
 		"@repo/mail": "workspace:*",
 		"@repo/utils": "workspace:*",
+		"@repo/payments": "workspace:*",
 		"better-auth": "1.1.10",
 		"cookie": "^1.0.1",
 		"next": "15.1.3"
