--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,6 +71,7 @@
 		"@content-collections/mdx": "^0.2.0",
 		"@content-collections/next": "^0.2.4",
 		"@mdx-js/mdx": "^3.1.0",
+		"@playwright/test": "^1.49.1",
 		"@repo/auth": "workspace:*",
 		"@repo/tailwind-config": "workspace:*",
 		"@repo/tsconfig": "workspace:*",
@@ -84,7 +85,7 @@
 		"@types/react-dom": "19.0.2",
 		"@types/uuid": "^10.0.0",
 		"autoprefixer": "10.4.20",
-		"cypress": "^13.17.0",
+		"dotenv": "^16.4.7",
 		"dotenv-cli": "^8.0.0",
 		"markdown-toc": "^1.2.0",
 		"mdx": "^0.3.1",
@@ -98,7 +99,8 @@
 	"scripts": {
 		"build": "next build",
 		"dev": "next dev --turbo",
-		"e2e": "dotenv -c -e ../../.env -- start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+		"e2e": "pnpm exec playwright test --ui",
+		"e2e:ci": "pnpm exec playwright install && pnpm exec playwright test",
 		"lint": "next lint",
 		"shadcn-ui": "pnpm dlx shadcn@latest",
 		"start": "next start",
