fix: creem config

--- a/.env.local.example
+++ b/.env.local.example
@@ -39,7 +39,12 @@ STRIPE_WEBHOOK_SECRET=""
 # ... with Chargebee
 CHARGEBEE_SITE=""
 CHARGEBEE_API_KEY=""
+# ... with Creem
+CREEM_WEBHOOK_SECRET=""
 
+# Products
+NEXT_PUBLIC_PRODUCT_ID_PRO_MONTHLY="prod_77mnWUvIXKJuLKisxMRTIn"
+NEXT_PUBLIC_PRODUCT_ID_PRO_YEARLY="prod_TSRTiZYbv8sOPzHEG7Vvv"
 
 # Analytics
 # ... for Pirsch
