--- a/turbo.json
+++ b/turbo.json
@@ -1,38 +1,7 @@
 {
 	"$schema": "https://turbo.build/schema.json",
 	"globalDependencies": ["**/.env.*local"],
-	"globalEnv": [
-		"NODE_ENV",
-		"PORT",
-		"DATABASE_URL",
-		"BETTER_AUTH_SECRET",
-		"NEXT_PUBLIC_SITE_URL",
-		"VERCEL_URL",
-		"LEMONSQUEEZY_STORE_ID",
-		"LEMONSQUEEZY_WEBHOOK_SECRET",
-		"LEMONSQUEEZY_API_KEY",
-		"STRIPE_SECRET_KEY",
-		"STRIPE_WEBHOOK_SECRET",
-		"CHARGEBEE_API_KEY",
-		"CHARGEBEE_SITE",
-		"MAIL_HOST",
-		"MAIL_PORT",
-		"MAIL_USER",
-		"MAIL_PASS",
-		"GITHUB_CLIENT_ID",
-		"GITHUB_CLIENT_SECRET",
-		"GOOGLE_CLIENT_ID",
-		"GOOGLE_CLIENT_SECRET",
-		"S3_ENDPOINT",
-		"S3_ACCESS_KEY_ID",
-		"S3_SECRET_ACCESS_KEY",
-		"PLUNK_API_KEY",
-		"RESEND_API_KEY",
-		"POSTMARK_SERVER_TOKEN",
-		"NEXT_PUBLIC_AVATARS_BUCKET_NAME",
-		"OPENAI_API_KEY",
-		"CREEM_API_KEY"
-	],
+	"globalEnv": ["*"],
 	"tasks": {
 		"build": {
 			"dependsOn": ["^generate", "^build"],
