--- a/.env.local.example
+++ b/.env.local.example
@@ -40,6 +40,7 @@ STRIPE_WEBHOOK_SECRET=""
 CHARGEBEE_SITE=""
 CHARGEBEE_API_KEY=""
 # ... with Creem
+CREEM_API_KEY=""
 CREEM_WEBHOOK_SECRET=""
 
 # Products
