--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -77,6 +77,7 @@
 		"@repo/tailwind-config": "workspace:*",
 		"@repo/tsconfig": "workspace:*",
 		"@shikijs/rehype": "^2.0.3",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@types/js-cookie": "^3.0.4",
 		"@types/mdx": "^2.0.13",
 		"@types/node": "22.10.7",
@@ -92,7 +93,7 @@
 		"postcss": "8.5.1",
 		"rehype-img-size": "^1.0.1",
 		"start-server-and-test": "^2.0.10",
-		"tailwindcss": "3.4.17"
+		"tailwindcss": "4.0.0"
 	},
 	"name": "@repo/web",
 	"private": true,
