feat: add paywall

--- a/biome.json
+++ b/biome.json
@@ -13,8 +13,7 @@
 				"noArrayIndexKey": "off"
 			},
 			"complexity": {
-				"noForEach": "off",
-				"useSimplifiedLogicExpression": "warn"
+				"noForEach": "off"
 			},
 			"correctness": {
 				"useExhaustiveDependencies": "off",
