fix: example env for supabase

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,7 @@
 # Database
 DATABASE_URL="YOUR_DATABASE_CONNECTION_STRING"
 # ... if you use Supabase
-MIGRATION_DATABASE_URL=""
+DIRECT_URL=""
 
 # Site url
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
