--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
 	"i18n-ally.keystyle": "nested",
 	"i18n-ally.enabledFrameworks": ["next-intl"],
 	"i18n-ally.keysInUse": ["mail.organizationInvitation.headline"],
-	"i18n-ally.tabStyle": "tab"
+	"i18n-ally.tabStyle": "tab",
+	"[postcss]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
