--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,15 +1,9 @@
 {
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@mertasan/tailwindcss-variables": "^2.7.0",
-		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
-		"@types/mertasan__tailwindcss-variables": "^2.6.4",
-		"tailwindcss": "^4.0.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss": "^4.0.0"
 	},
-	"main": "index.ts",
+	"main": "theme.css",
 	"name": "@repo/tailwind-config",
 	"private": true,
 	"scripts": {
