--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,6 @@
 		"@radix-ui/react-select": "^2.1.5",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
-		"@radix-ui/react-toast": "^1.2.5",
 		"@radix-ui/react-tooltip": "^1.1.7",
 		"@repo/api": "workspace:*",
 		"@repo/auth": "workspace:*",
@@ -59,6 +58,7 @@
 		"server-only": "^0.0.1",
 		"sharp": "^0.33.5",
 		"slugify": "^1.6.6",
+		"sonner": "^1.7.4",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"ufo": "^1.5.4",
