--- a/.env.local.example
+++ b/.env.local.example
@@ -61,6 +61,7 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=""
 S3_ACCESS_KEY_ID=""
 S3_SECRET_ACCESS_KEY=""
 S3_ENDPOINT=""
+S3_REGION=""
 NEXT_PUBLIC_AVATARS_BUCKET_NAME="avatars"
 
 # AI
