feat: add polar as payment provider

--- a/.env.local.example
+++ b/.env.local.example
@@ -42,6 +42,9 @@ CHARGEBEE_API_KEY=""
 # ... with Creem
 CREEM_API_KEY=""
 CREEM_WEBHOOK_SECRET=""
+# ... with Polar
+POLAR_ACCESS_TOKEN=""
+POLAR_WEBHOOK_SECRET=""
 
 # Products
 NEXT_PUBLIC_PRODUCT_ID_PRO_MONTHLY="prod_77mnWUvIXKJuLKisxMRTIn"
