--- a/packages/payments/package.json
+++ b/packages/payments/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
+		"@polar-sh/sdk": "^0.27.0",
 		"@repo/config": "workspace:*",
 		"@repo/database": "workspace:*",
 		"@repo/logs": "workspace:*",
