--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,7 +60,6 @@
 		"slugify": "^1.6.6",
 		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
-		"tailwindcss-animate": "^1.0.7",
 		"ufo": "^1.5.4",
 		"usehooks-ts": "^3.1.1",
 		"uuid": "^11.1.0",
@@ -93,8 +92,7 @@
 		"postcss": "8.5.3",
 		"rehype-img-size": "^1.0.1",
 		"start-server-and-test": "^2.0.10",
-		"tailwindcss": "4.0.8",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss": "4.0.8"
 	},
 	"name": "@repo/web",
 	"private": true,
