fix: mysql compatibility out-of-the-box

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,12 +10,13 @@
 		"@types/node": "22.13.5",
 		"dotenv-cli": "^8.0.0",
 		"prisma": "^6.3.1",
+		"prisma-json-types-generator": "^3.2.2",
 		"zod-prisma-types": "^3.2.4"
 	},
 	"main": "./index.ts",
 	"name": "@repo/database",
 	"scripts": {
-		"generate": "prisma generate",
+		"generate": "prisma generate --no-hints",
 		"push": "dotenv -c -e ../../.env -- prisma db push --skip-generate",
 		"migrate": "dotenv -c -e ../../.env -- prisma migrate dev",
 		"studio": "dotenv -c -e ../../.env -- prisma studio",
