fix: disable biome formatting for css

--- a/biome.json
+++ b/biome.json
@@ -39,6 +39,11 @@
 	"javascript": {
 		"jsxRuntime": "reactClassic"
 	},
+	"css": {
+		"formatter": {
+			"enabled": false
+		}
+	},
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
