--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,7 +63,8 @@
 		"ufo": "^1.5.4",
 		"usehooks-ts": "^3.1.1",
 		"uuid": "^11.1.0",
-		"zod": "^3.24.2"
+		"zod": "^3.24.2",
+		"browser-image-compression": "^2.0.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
