--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,7 +18,9 @@
 		"openai": "^4.85.4",
 		"openapi-merge": "^1.3.3",
 		"use-intl": "^3.26.5",
-		"zod": "^3.24.2"
+		"zod": "^3.24.2",
+		"@hono/zod-validator": "^0.4.1",
+		"zod-openapi": "^4.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
