--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -3,8 +3,10 @@
 		"@ai-sdk/anthropic": "^1.1.10",
 		"@ai-sdk/openai": "^1.1.14",
 		"@ai-sdk/react": "^1.1.18",
+		"@repo/utils": "workspace:*",
 		"ai": "^4.1.46",
-		"openai": "^4.85.4"
+		"openai": "^4.85.4",
+		"axios": "^1.7.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
