--- a/.env.local
+++ b/.env.local
@@ -12,8 +12,8 @@ BETTER_AUTH_SECRET="A_RANDOM_SECRET_STRING"
 GITHUB_CLIENT_ID="YOUR_GITHUB_CLIENT_ID"
 GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
 # ... for Google
-GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
-GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_SECRET"
+GOOGLE_CLIENT_ID="1064712682654-2u76fueh22iqa1o8ug3qr4v7h0q5r9fe.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
 
 # Mails
 # ... with nodemailer
