--- a/.env.local
+++ b/.env.local
@@ -40,15 +40,20 @@ STRIPE_WEBHOOK_SECRET=""
 CHARGEBEE_SITE=""
 CHARGEBEE_API_KEY=""
 # ... with Creem
-CREEM_API_KEY=""
-CREEM_WEBHOOK_SECRET=""
+CREEM_API_KEY="creem_test_3twbgIM1aZKtbCYPsrQU29"
+CREEM_WEBHOOK_SECRET="whsec_5ZiaHpFc3dzue5Uwxe9E2B"
 # ... with Polar
 POLAR_ACCESS_TOKEN=""
 POLAR_WEBHOOK_SECRET=""
 
 # Products
-NEXT_PUBLIC_PRODUCT_ID_PRO_MONTHLY="prod_77mnWUvIXKJuLKisxMRTIn"
-NEXT_PUBLIC_PRODUCT_ID_PRO_YEARLY="prod_TSRTiZYbv8sOPzHEG7Vvv"
+NEXT_PUBLIC_PRODUCT_ID_TRIAL="prod_5sO4ETpO8LTGy6GUfwTzQZ"
+
+
+## 正式
+# NEXT_PUBLIC_PRODUCT_ID_TRIAL="prod_3oxUG4slKtCI94dteY6jHl"
+# NEXT_PUBLIC_PRODUCT_ID_Basic="prod_8s9w9CWYCtAtYS6AAy5aG"
+# NEXT_PUBLIC_PRODUCT_ID_PRO="prod_Vjko9cr5v7gQKJRZLl9g4"
 
 # Analytics
 # ... for Pirsch
