--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,7 +64,8 @@
 		"usehooks-ts": "^3.1.1",
 		"uuid": "^11.1.0",
 		"zod": "^3.24.2",
-		"browser-image-compression": "^2.0.2"
+		"browser-image-compression": "^2.0.2",
+		"mdx-bundler": "^1.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
